<resources>
    <string name="app_name">Bnade</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="wow_tokens">时光徽章</string>
    <string name="item_search">物价查询</string>
    <string name="realm_rank">服务器排行</string>
    <string name="search_rank">搜索排行</string>
    <string name="wow_token_current_price">当前价格</string>
    <string name="wow_token_modified_time">更新时间</string>
    <string name="wow_token_min_price">24小时最低价</string>
    <string name="wow_token_max_price">24小时最高价</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hot_label">热门搜索</string>
    <string name="search_hot_month">每月</string>
    <string name="search_hot_week">每周</string>
    <string name="search_hot_day">每日</string>
    <string name="search_history_label">搜索历史</string>
    <string name="result_avg_buyout">全服均价：%1$s</string>
    <string name="realm_rank_total_count">拍卖总数</string>
    <string name="realm_rank_user_count">玩家数</string>
    <string name="realm_rank_item_kind">物品种类</string>
    <string name="realm_rank_update_time">更新时间</string>
    <string name="search_result_filter_hint">过滤服务器</string>
    <string name="wow_token_one_day">24小时内</string>
    <string name="scope">~</string>
    <string name="wow_token_history">历史数据</string>
    <string name="realm_select_search_hint">过滤服务器</string>
    <string name="realm_select_no_match">没有找到服务器</string>
    <string name="btn_realm_select">选择服务器</string>
    <string name="search_query_hint">物品名称，支持模糊</string>
    <string name="player_item">玩家物品</string>
    <string name="toast_player_item_no_select_realm">请选择服务器</string>
    <string name="bid_price">当前竞价</string>
    <string name="buyout">一口价</string>
    <string name="search_query_hint_player">请输入玩家名</string>
    <string name="filter">筛选</string>
    <string name="btn_clear">清除</string>
    <string name="fragment_title_current_price">当前价格</string>
    <string name="fragment_title_history_trand">历史趋势</string>
    <string name="label_one_day">@string/wow_token_one_day</string>
    <string name="label_week">一周内</string>
    <string name="label_history">@string/wow_token_history</string>
    <string name="delete_used_realm">删除%1$s</string>
    <string name="revoked">撤销</string>
    <string name="personal">我的</string>
</resources>
