<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/btn_item_search"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/item_search" />
        <item
            android:id="@+id/btn_token"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/wow_tokens" />
        <item
            android:id="@+id/btn_realm_rank"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/realm_rank" />
        <item
            android:id="@+id/btn_player_item"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/player_item" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
