<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="36dp"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/tv_total_count"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/realm_rank_total_count"
        android:textAppearance="?attr/textAppearanceListItemSmall"
        tools:text="123123"
        />

    <TextView
        android:id="@+id/tv_user_count"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/realm_rank_user_count"
        android:textAppearance="?attr/textAppearanceListItemSmall"
        tools:text="123123"
        />

    <TextView
        android:id="@+id/tv_item_kind"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/realm_rank_item_kind"
        android:textAppearance="?attr/textAppearanceListItemSmall"
        tools:text="123123"
        />

    <TextView
        android:id="@+id/tv_update_time"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/realm_rank_update_time"
        android:textAppearance="?attr/textAppearanceListItemSmall"
        tools:text="15:33"
        />
</LinearLayout>